--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,9 @@ requests>=2.28.0
 beautifulsoup4>=4.12.0
 pypdf>=3.12.0
 PyPDF2>=3.0.0
+transformers>=4.30.0
+torch>=2.0.0
+openai>=1.0.0
+scikit-learn>=1.3.0
+numpy>=1.24.0
+pandas>=2.0.0
