--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 requests>=2.28.0
 beautifulsoup4>=4.12.0
-pypdf>=3.12.0
 PyPDF2>=3.0.0
+pdfminer.six>=20211012
+python-docx>=0.8.11
+markdown>=3.4.0
+chardet>=5.0.0
+pytest>=7.0.0
