--- a/config.yaml
+++ b/config.yaml
@@ -41,6 +41,20 @@ rag:
       reporting_top_k: 3
       evidence_logging: true
 
+# MCP Server Bridge Configuration
+mcp:
+  enabled: true
+  model:
+    provider: "transformers_local"  # transformers_local | hf_inference
+    name: "mistral-7b-instruct"  # default model
+    endpoint_url: null  # if using hf_inference
+    temperature: 0.1
+    max_tokens: 2048
+  max_tool_steps: 5
+  tool_timeout_s: 30
+  total_timeout_s: 120
+  enable_deterministic: false
+
 # Evidence Logging Configuration
 evidence:
   enabled: true
