--- a/config.yaml
+++ b/config.yaml
@@ -31,9 +31,6 @@ rag:
   retriever:
     top_k: 5
   agents:
-    tiktok_feature_generator:
-      compliance_validation: true
-      regulatory_context_top_k: 3
     compliance_analyzer:
       analysis_top_k: 5
       jurisdiction_filtering: true
@@ -45,9 +42,10 @@ rag:
 mcp:
   enabled: true
   model:
-    provider: "transformers_local"  # transformers_local | hf_inference
-    name: "mistral-7b-instruct"  # default model
-    endpoint_url: null  # if using hf_inference
+    provider: "mock"  # mock | langchain_hf | transformers_local | hf_inference
+    name: "mock-model"  # Model name
+    repo_id: "google/flan-t5-large"  # HuggingFace repo ID for langchain_hf (when available)
+    endpoint_url: null
     temperature: 0.1
     max_tokens: 2048
   max_tool_steps: 5
